--- a/package.json
+++ b/package.json
@@ -1,9 +1,11 @@
 {
-  "name": "band-manager",
+  "name": "femme-rock-band-manager",
   "version": "1.0.0",
-  "description": "A wrapper for storing and querying band data in a MySQL database",
-  "main": "index.js",
+  "description": "A wrapper for storing and querying FemmeRock band data in a MySQL database",
+  "main": "src/index.js",
   "scripts": {
+    "start": "node index",
+    "start.dev": "nodemon -L",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -17,12 +19,13 @@
   },
   "homepage": "https://github.com/victoriaLemay/band-manager#readme",
   "dependencies": {
-    "mysql2": "^2.1.0",
-    "sequelize": "^6.3.4",
-    "umzug": "^2.3.0"
+    "mariadb": "^2.5.3",
+    "sequelize": "^6.6.2",
+    "umzug": "^3.0.0-beta.15"
   },
   "devDependencies": {
-    "chai": "^4.2.0",
-    "mocha": "^8.1.1"
+    "chai": "^4.3.4",
+    "mocha": "^8.4.0",
+    "nodemon": "^2.0.7"
   }
 }
