--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "node index",
     "start.dev": "nodemon -L",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "mocha --require test/fixtures.js"
   },
   "repository": {
     "type": "git",
